testimonial fonts and next-intl

--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -35,6 +35,9 @@ html {
   .h4 {
     @apply text-[19px] lg:text-[20px] xl:text-[22px] 2xl:text-[22px] 3xl:text-[24px] text-dark uppercase font-secondary max-w-[510px] leading-none;
   }
+  .p {
+    @apply text-[19px] lg:text-[20px] xl:text-[20px] 
+  }
 
   /* buttons */
   .btn {
