--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -26,10 +26,10 @@ html {
     @apply text-[60px] lg:text-[80px] xl:text-[90px] tracking-[-2px] leading-none font-rozha mb-4;
   }
   .h2 {
-    @apply text-[40px] lg:text-[60px] xl:text-[70px] 2xl:text-[55px] text-dark uppercase font-oswald max-w-[236px] 2xl:max-w-[400px] leading-none mb-[38px] 2xl:mb-[70px] 3xl:mb-[90px];
+    @apply text-[40px] md:text-[40px] lg:text-[40px] xl:text-[40px] 2xl:text-[55px] text-dark uppercase font-oswald max-w-[236px] 2xl:max-w-[400px] leading-none mb-[38px] 2xl:mb-[70px] 3xl:mb-[90px];
   }
   .h3 {
-    @apply text-[34px] lg:text-[36px] xl:text-[40px] 2xl:text-[42px] text-dark uppercase font-oswald max-w-[300px] 2xl:max-w-[400px] leading-none mb-[15px];
+    @apply text-[30px] lg:text-[28px] xl:text-[28px] 2xl:text-[42px] text-dark uppercase font-oswald max-w-[300px] 2xl:max-w-[400px] leading-none mb-[15px]; 
   }
   .h4 {
     @apply text-[19px] lg:text-[20px] xl:text-[22px] 2xl:text-[22px] 3xl:text-[24px] text-dark uppercase font-secondary max-w-[510px] leading-none;
